feat: Integrate @pixiv/three-vrm-animation official library
- Add three-vrm-animation.module.js library file
- Configure importmap in index.html
- Refactor vrm-animation.js to use official library
- Remove manual bone retargeting and quaternion fixes (handled by library)
- Preserve all custom features: lip sync, debug mode, playback speed, etc.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2329,7 +2329,8 @@
         "imports": {
             "three": "/static/libs/three.module.js",
             "three/addons/": "/static/libs/three/addons/",
-            "@pixiv/three-vrm": "/static/libs/three-vrm.module.min.js"
+            "@pixiv/three-vrm": "/static/libs/three-vrm.module.min.js",
+            "@pixiv/three-vrm-animation": "/static/libs/three-vrm-animation.module.js"
         }
     }
     </script>
